loopfor.LoopCourse.scala.error
Erreur de compilation :
LoopCourse:9: error: type mismatch;
 found   : Unit
 required: Boolean
  if (qtour=4){
           ^